# llm-rag

./: .gitignore  README.md  demo.http  rag.ipynb
docs/: news.txt
python/: rag.ipynb
rust/: Cargo.toml  demo.http
rust/src/: main.rs
scala/: build.sbt
scala/src/main/scala/: Main.scala
scala/src/main/scala/com/ming/cats-effect/: Main.scala
scala/src/main/scala/com/ming/kyo/: Main.scala
scala/src/main/scala/com/ming/kyo/ollama/: Ollama.scala
scala/src/main/scala/com/ming/kyo/ollama/completion/: ChatCompletionModel.scala
scala/src/test/scala/com/ming/kyo/ollama/completion/: OllamaRequestTest.scala
