[package]
name = "llm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
ollama-rs = {version = "0.1.7", features = ["stream"] }
simple-fs = { version = "0.1", features = ["full"] }
derive_more = { version = "=1.0.0-beta.6", features = ["from"] }
tokenizers = "0.15.2"
text-splitter = "0.7.0"
serde = "1.0.197"
reqwest = { version = "0.12.1", features = ["default", "json"] }
serde_json = "1.0.114"
qdrant-client = { version = "1.8.0", features = ["default"] }
anyhow = "1.0.81"
